fixed z-index

--- a/ui/vzk-ui/src/app/pages/teamspage/player-card/player-card.component.css
+++ b/ui/vzk-ui/src/app/pages/teamspage/player-card/player-card.component.css
@@ -77,7 +77,7 @@
 }
 .c-preview__title {
   position: relative;
-  z-index: 10;
+  z-index: 1;
   text-transform: uppercase;
   letter-spacing: 0.05em;
 }
@@ -98,7 +98,7 @@
 
 .rec-content {
   position: relative;
-  z-index: 2;
+  z-index: 1;
   top: 10px;
 }
 
